# myOpenGlStudy

./: CMakeLists.txt  glad.c  main.cpp
Application/: Application.cpp  Application.h  CMakeLists.txt  assimpLoder.cpp  assimpLoder.h
Application/camera/: camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  gameCameraControl.h  orthoGraphicCamera.cpp  orthoGraphicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  trackBallCameraControl.cpp  trackBallCameraControl.h
GoogleTest/: CMakeLists.txt  light_test.cpp  transform_test.cpp
assets/shaders/: diffuse.frag  fragment.glsl  lighting.frag  lighting.vert  manualMipmapfs.glsl  mipmapTestVertex.glsl  moveVertex.glsl  normal.frag  phong.frag  phongDirectionalLight.frag  phongDirectionalLight.vert  phongOpacityMask.frag  phongOpacityMask.vert  pointLight.frag  variableFragment.glsl  vertex.glsl  white.frag  white.vert
glframework/: CMakeLists.txt  core.h  geometry.cpp  geometry.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  node.cpp  node.h  object - 副本.h  object.h  objectBase.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h
glframework/event/: event.h  eventBus.h  eventListener.h
glframework/light/: ambientLight.h  directionalLight.cpp  directionalLight.h  light.cpp  light.h  pointLight.cpp  pointLight.h  spotLight.cpp  spotLight.h
glframework/material/: depthMaterial.cpp  depthMaterial.h  material.cpp  material.h  opacityMaskMaterial.cpp  opacityMaskMaterial.h  phongMaterial.cpp  (+3 more)
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
(+4 files in other folders)
